# slipstream-rust

./: .gitignore  Cargo.toml  README.md  README_FA.md  ZSTD_IMPLEMENTATION_NOTES.md  cert.pem  cert_short.pem  key.pem  key_short.pem
.github/actions/build-binary/: action.yml
.github/workflows/: ci.yml  release.yml
crates/slipstream-client/: Cargo.toml
crates/slipstream-client/src/: android.rs  client.rs  dns.rs  main.rs  runtime.rs  streams.rs
crates/slipstream-client/tests/: max_qname_len_e2e.rs
crates/slipstream-core/: Cargo.toml
crates/slipstream-core/src/: auth.rs  compression.rs  flow_control.rs  invariants.rs  lib.rs  net.rs  sip003.rs
crates/slipstream-dns/: Cargo.toml
crates/slipstream-ffi/: Cargo.toml  build.rs
crates/slipstream-ffi/cc/: slipstream_mixed_cc.c  slipstream_poll.c  slipstream_server_cc.c  slipstream_stateless_packet.c  slipstream_wincompat.c  slipstream_wintimeofday.c
crates/slipstream-ffi/src/: lib.rs  picoquic.rs  runtime.rs
crates/slipstream-server/: Cargo.toml
docker/: .env  Dockerfile.microsocks  Dockerfile.slipstream  compose.yaml
docs/: README.md  benchmarks.md  build.md  config.md  design.md  dns-codec.md  install-oneclick.md  picoquic-changes.md  protocol.md  sip003.md  usage.md
fixtures/certs/: README.md
scripts/: README.md  build_picoquic.sh  build_picoquic_windows.ps1  installer.sh  verify_ipv4_listener.sh  verify_windows_artifact_deps.ps1
scripts/bench/: bench_compression.sh  run_rust_rust_10mb.sh  run_rust_rust_mixed.sh
scripts/interop/: test_udp_capture_proxy.py  udp_capture_proxy.py
(+32 files in other folders)
