[package]
name = "slipstream-ffi"
version = "0.1.0"
edition = "2021"
description = "FFI bindings and runtime helpers for picoquic in Slipstream"
license = "Apache-2.0"
repository = "https://github.com/Mygod/slipstream-rust"
readme = "../../README.md"

[dependencies]
libc = "0.2"
openssl-sys = { version = "0.9", features = ["vendored"] }
slipstream-core = { path = "../slipstream-core" }
